bad-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: bad-pod
  name: bad-pod
  namespace: marketing
spec:
  containers:
  - image: nginx
    name: bad-pod
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
