good-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: good-pod
  name: good-pod
spec:
  containers:
  - image: gcr.io/google-containers/pause:3.2
    name: good-pod
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
